@@ -1,3 +1,13 @@
+2001-11-27  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* tests/switch.test (switch-9.*): Added tests to exercise more of
+	the argument checking.  (switch-7.2,switch-7.3): Test changed
+	behaviour slightly.
+	* generic/tclCmdMZ.c (Tcl_SwitchObjCmd): Reworked argument parsing
+	to be stricter about what it accepts.  This should make uses of
+	the [switch] command be more maintainable.  [Bug 475397, reported
+	by Don Porter.]
+
 2001-11-26  Don Porter <dgp@users.sourceforge.net>
 
 	* generic/tclIntPlatDecls.h: 'make genstubs' after changes
